<resources>
    <string name="app_name">Cotton</string>

    <!-- activity_login strings -->
    <string name="activity_login_banner_logo">Cotton</string>
    <string name="activity_login_username_hint">Email</string>
    <string name="activity_login_password_hint">Password</string>
    <string name="activity_login_sign_in">Sign In</string>
    <string name="activity_login_register">Register</string>
    <string name="activity_login_forgot_info_string"><u>Forgot your information? No problem, Click Here!</u></string>

    <!-- activity_register strings -->
    <string name="activity_register_header_text">Register for Cotton!</string>
    <string name="activity_register_email_hint">Email</string>
    <string name="activity_register_username_input_header">A unique username that represents you. Cotton will address you by this name.</string>
    <string name="activity_register_username_hint">Username</string>
    <string name="activity_register_password_hint">Password</string>
    <string name="activity_register_password_input_header">A password that contains a number and a unique character</string>
    <string name="activity_register_password_confirm_hint">Confirm Password</string>
    <string name="activity_register_button_text">Register</string>

    <string name="dialog_cotton_message_button_text">Back to Login!</string>

</resources>
