<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/activity_register_wrapper"
        android:background="@color/colorPrimary">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="36dp"
            android:background="@color/colorPrimary">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="@string/activity_register_header_text"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:paddingLeft="13dp"
                android:paddingRight="13dp"
                android:layout_marginBottom="12dp"
                android:id="@+id/activity_register_email_input"
                android:hint="@string/activity_register_email_hint"
                android:inputType="textEmailAddress"
                android:background="@drawable/round_edit_texts"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:paddingStart="7dp"
                android:text="@string/activity_register_username_input_header"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-condensed"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:paddingLeft="13dp"
                android:paddingRight="13dp"
                android:layout_marginBottom="12dp"
                android:id="@+id/activity_register_username_input"
                android:inputType="text"
                android:hint="@string/activity_register_username_hint"
                android:background="@drawable/round_edit_texts"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:paddingStart="7dp"
                android:text="@string/activity_register_password_input_header"
                android:textColor="@color/white"
                android:fontFamily="sans-serif-condensed"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:paddingLeft="13dp"
                android:paddingRight="13dp"
                android:layout_marginBottom="12dp"
                android:id="@+id/activity_register_password_input"
                android:inputType="textPassword"
                android:hint="@string/activity_register_password_hint"
                android:fontFamily="sans-serif"
                android:background="@drawable/round_edit_texts"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:paddingLeft="13dp"
                android:paddingRight="13dp"
                android:id="@+id/activity_register_password_confirm_input"
                android:inputType="textPassword"
                android:hint="@string/activity_register_password_confirm_hint"
                android:fontFamily="sans-serif"
                android:background="@drawable/round_edit_texts"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="42dp"
                android:layout_gravity="end"
                android:id="@+id/activity_register_button"
                android:text="@string/activity_register_button_text"
                android:textColor="@color/white"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>