<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/activity_login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/activity_login_inner"
        android:orientation="vertical"
        android:padding="36dp"
        android:background="@color/colorPrimary">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="55dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_login_banner_logo"
                android:textColor="@color/white"
                android:textSize="74sp"
                android:fontFamily="sans-serif"
                android:textStyle="bold"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:id="@+id/activity_login_username_wrap">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:paddingLeft="13dp"
                android:paddingRight="13dp"
                android:id="@+id/activity_login_username"
                android:background="@drawable/round_edit_texts"
                android:inputType="text"
                android:hint="@string/activity_login_username_hint"
                android:textColor="@color/textColor"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/activity_login_password_wrap"
            android:paddingBottom="25dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="7dp"
                android:paddingBottom="7dp"
                android:paddingLeft="13dp"
                android:paddingRight="13dp"
                android:id="@+id/activity_login_password"
                android:background="@drawable/round_edit_texts"
                android:inputType="textPassword"
                android:hint="@string/activity_login_password_hint"
                android:fontFamily="sans-serif"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:id="@+id/activity_login_form_buttons"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:id="@+id/activity_login_signin_button"
                android:text="@string/activity_login_sign_in"
                android:textColor="@color/white"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/activity_login_register_button"
                android:text="@string/activity_login_register"
                android:textColor="@color/white"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/activity_login_forgot_info_wrapper"
            android:padding="6dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_login_forgot_info_string"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>